[gd_scene load_steps=7 format=2]

[ext_resource path="res://gui/JoinGameMenu.gd" type="Script" id=1]
[ext_resource path="res://misc/border_filled.png" type="Texture" id=2]
[ext_resource path="res://gui/alphbeta.ttf" type="DynamicFontData" id=3]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]
content_margin_left = 8.0
content_margin_right = 8.0
content_margin_top = 8.0
content_margin_bottom = 8.0

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 3 )

[node name="JoinGameMenu" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 245.0
margin_top = 107.0
margin_right = 395.0
margin_bottom = 252.0

[node name="NameField" type="LineEdit" parent="CenterContainer/VBoxContainer"]
margin_right = 150.0
margin_bottom = 31.0
rect_min_size = Vector2( 150, 0 )
custom_styles/focus = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
max_length = 12
placeholder_text = "Name"
placeholder_alpha = 0.5
caret_blink = true
caret_blink_speed = 0.5

[node name="NinePatchRect" type="NinePatchRect" parent="CenterContainer/VBoxContainer/NameField"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Warrior" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 35.0
margin_right = 150.0
margin_bottom = 56.0
custom_fonts/font = SubResource( 3 )
text = "Join as Warrior"
flat = true

[node name="NinePatchRect2" type="NinePatchRect" parent="CenterContainer/VBoxContainer/Warrior"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Archer" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 60.0
margin_right = 150.0
margin_bottom = 81.0
custom_fonts/font = SubResource( 3 )
text = "Join as Archer"
flat = true

[node name="NinePatchRect3" type="NinePatchRect" parent="CenterContainer/VBoxContainer/Archer"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Priest" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 85.0
margin_right = 150.0
margin_bottom = 106.0
custom_fonts/font = SubResource( 3 )
disabled = true
text = "Join as Priest"
flat = true

[node name="NinePatchRect4" type="NinePatchRect" parent="CenterContainer/VBoxContainer/Priest"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="CenterContainer/VBoxContainer"]
margin_top = 110.0
margin_right = 150.0
margin_bottom = 120.0
rect_min_size = Vector2( 0, 10 )

[node name="Disconnect" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 124.0
margin_right = 150.0
margin_bottom = 145.0
custom_fonts/font = SubResource( 3 )
text = "Disconnect"
flat = true

[node name="NinePatchRect5" type="NinePatchRect" parent="CenterContainer/VBoxContainer/Disconnect"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="text_changed" from="CenterContainer/VBoxContainer/NameField" to="." method="_on_NameField_text_changed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Warrior" to="." method="_on_Warrior_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Archer" to="." method="_on_Archer_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Priest" to="." method="_on_Priest_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Disconnect" to="." method="_on_Disconnect_pressed"]
